# SUITER

./: .gitignore  .vercelignore  DEMO_INSTRUCTIONS.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INFO.md  DEPLOYMENT_VERCEL.txt  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  NGROK_SETUP.txt  README.md  SUI_CLI_INSTALLING.md  VERCEL_QUICK_START.txt  api_mock.py  app.js  build.sh  design.md  frontend_server.py  package.json  styles.css  suiter.db  vercel.json
.github/workflows/: deploy-frontend.yml
api/: Cargo.toml  proxy.js
api/src/: main.rs  models.rs
api/src/handlers/: attention.rs  claims.rs  debug.rs  mod.rs  posts.rs  profiles.rs
contracts/: Move.toml
contracts/sources/: attention.move  creator_lifeline.move  post.move  reputation.move
contracts/tests/: attention_tests.move  post_tests.move  profile_tests.move
database/migrations/: 001_init.sql  002_monitoring.sql
frontend/: README_STATIC.md  app.js  index.html  package-lock.json  package.json  proxy_server.py  server.sh  styles.css
frontend/mock/: posts.json  rankings.json
frontend/src/components/: Header.js  PostCard.js  Sidebar.js
frontend/src/lib/: api.js
frontend/src/pages/: _document.js  index.js
frontend/src/styles/: globals.css
indexer/: Cargo.toml
indexer/src/: feed_ranker.rs  main.rs  sui_indexer.rs
mock/: posts.json  rankings.json
